displaying VTM in dm+d browser - VTMs with single Ingredients - VTMs with multiple ingredients - Homeopathic VTMs - Invalid VTMs with no ingredients - Invalid VTMS with invalid ingredients

--- a/templates/tce-2226/result.html
+++ b/templates/tce-2226/result.html
@@ -190,7 +190,7 @@
                                     <tr class="nhsuk-table__row">
                                         <td class="nhsuk-table__cell">
                                             <a id="vtm0"
-                                                href="/tce-2226/vtm-display">
+                                                href="/tce-2226/vtm-display-AP">
                                                 <span class="nhsuk-u-visually-hidden">null </span>
                                                 <span id="vtm-name-0">Aspirin + Paracetamol</span>
                                             </a>
@@ -202,9 +202,9 @@
                                     <tr class="nhsuk-table__row">
                                         <td class="nhsuk-table__cell">
                                             <a id="vtm1"
-                                                href="/tce-2226/vtm-display2">
+                                                href="/tce-2226/vtm-display-A">
                                                 <span class="nhsuk-u-visually-hidden">null </span>
-                                                <span id="vtm-name-1">Aspirin + Caffeine</span>
+                                                <span id="vtm-name-1">Aspirin</span>
                                             </a>
                                         </td>
 
@@ -214,9 +214,9 @@
                                     <tr class="nhsuk-table__row">
                                         <td class="nhsuk-table__cell">
                                             <a id="vtm2"
-                                                href="/tce-2226/vtm-display">
+                                                href="/tce-2226/vtm-display4">
                                                 <span class="nhsuk-u-visually-hidden">null </span>
-                                                <span id="vtm-name-2">Bisoprolol + Aspirin</span>
+                                                <span id="vtm-name-2">Aspirin + Caffeine + Paracetamol + Tramadol</span>
                                             </a>
                                         </td>
 
@@ -226,9 +226,9 @@
                                     <tr class="nhsuk-table__row">
                                         <td class="nhsuk-table__cell">
                                             <a id="vtm3"
-                                                href="/tce-2226/vtm-display">
+                                                href="/tce-2226/vtm-display-homeopathic">
                                                 <span class="nhsuk-u-visually-hidden">null </span>
-                                                <span id="vtm-name-3">Aspirin + Codeine</span>
+                                                <span id="vtm-name-3">Homeopathic arnica montana</span>
                                             </a>
                                         </td>
 
@@ -238,9 +238,9 @@
                                     <tr class="nhsuk-table__row">
                                         <td class="nhsuk-table__cell">
                                             <a id="vtm4"
-                                                href="/tce-2226/vtm-display">
+                                                href="/tce-2226/vtm-display-invalid">
                                                 <span class="nhsuk-u-visually-hidden">null </span>
-                                                <span id="vtm-name-4">Aspirin + Isosorbide mononitrate</span>
+                                                <span id="vtm-name-4">Salicylic acid + Sulfur + Hydrocortisone</span>
                                             </a>
                                         </td>
 
@@ -250,9 +250,9 @@
                                     <tr class="nhsuk-table__row">
                                         <td class="nhsuk-table__cell">
                                             <a id="vtm5"
-                                                href="/tce-2226/vtm-display">
+                                                href="/tce-2226/vtm-display-invalid2">
                                                 <span class="nhsuk-u-visually-hidden">null </span>
-                                                <span id="vtm-name-5">Aspirin</span>
+                                                <span id="vtm-name-5">Arsenic</span>
                                             </a>
                                         </td>
 
@@ -262,38 +262,16 @@
                                     <tr class="nhsuk-table__row">
                                         <td class="nhsuk-table__cell">
                                             <a id="vtm6"
-                                                href="/tce-2226/vtm-display">
+                                                href="/tce-2226/vtm-display-maxdisplay">
                                                 <span class="nhsuk-u-visually-hidden">null </span>
-                                                <span id="vtm-name-6">Aspirin + Metoclopramide</span>
+                                                <span id="vtm-name-6">Streptococcus pneumoniae Danish serotype</span>
                                             </a>
                                         </td>
 
                                         <td class="nhsuk-table__cell">774675004</td>
                                     </tr>
 
-                                    <tr class="nhsuk-table__row">
-                                        <td class="nhsuk-table__cell">
-                                            <a id="vtm7"
-                                                href="/tce-2226/vtm-display">
-                                                <span class="nhsuk-u-visually-hidden">null </span>
-                                                <span id="vtm-name-7">Aspirin + Papaveretum</span>
-                                            </a>
-                                        </td>
 
-                                        <td class="nhsuk-table__cell">774678002</td>
-                                    </tr>
-
-                                    <tr class="nhsuk-table__row">
-                                        <td class="nhsuk-table__cell">
-                                            <a id="vtm8"
-                                                href="/tce-2226/vtm-display">
-                                                <span class="nhsuk-u-visually-hidden">null </span>
-                                                <span id="vtm-name-8">Dipyridamole + Aspirin</span>
-                                            </a>
-                                        </td>
-
-                                        <td class="nhsuk-table__cell">774669008</td>
-                                    </tr>
                                 </tbody>
                             </table>
 
