--- a/templates/tce-2226/vtm-display-AP.html
+++ b/templates/tce-2226/vtm-display-AP.html
@@ -88,25 +88,25 @@
                                   Name
                                 </th>
                                 <th role="columnheader" class="" scope="col">
-                                  Discontinued
+                                  Invalid
                                 </th>
                               </tr>
                             </thead>
                             <tbody class="nhsuk-table__body">
                               <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin</td>
+                                <td class="nhsuk-table__cell"><a href="/tce-2226/ingredient">Aspirin</a></td>
                                 <td class="nhsuk-table__cell "> </td>
                               </tr>
                               <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin + Paracetamol</td>
+                                <td class="nhsuk-table__cell"><a href="/tce-2226/ingredient2">Paracetamol</a></td>
                                 <td class="nhsuk-table__cell "> </td>
                               </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Cocaina</td>
+                              <!--tr role="row" class="nhsuk-table__row">
+                                <td class="nhsuk-table__cell">Cocaine</td>
                                 <td class="nhsuk-table__cell " ><svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__tick nhsuk-icon__tick-red" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                     <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12"></path>
                                   </svg></td>
-                              </tr>
+                              </tr-->
                             </tbody>
                           </table>
 
