--- a/templates/tce-868/insert-amp-non-mandatory-attributes.html
+++ b/templates/tce-868/insert-amp-non-mandatory-attributes.html
@@ -148,7 +148,7 @@ for (i=0; i<=max ; i++){
       "Chocolate mint",
       "Citrus",
       "Citrus cola",
-      "Coffee",
+      "Caffeine",
       "Cola",
       "Cranberry",
       "Egg-nog",
