--- a/templates/tce-2226/all-ingredients.html
+++ b/templates/tce-2226/all-ingredients.html
@@ -9,7 +9,7 @@
                     <span class="nhsuk-caption-l">VTM Ingredients</span>
                     <span class="nhsuk-u-visually-hidden"> - </span>
                     <span id="full-product-name">
-                        <span id="product-name">Aspirin + Paracetamol</span>
+                        <span id="product-name">Streptococcus pneumoniae Danish serotype</span>
                     </span>
                 </h1>
             </div>
@@ -26,164 +26,103 @@
                 <div>
                     <section id="ingredients">
                         <h2 class="nhsuk-heading-l">Ingredient details</h2>
-                        <table class="nhsuk-table nhsuk-u-margin-bottom-3">
+                        <table class="nhsuk-table nhsuk-u-margin-bottom-4">
                         
-                            <thead role="rowgroup" class="nhsuk-table__head">
-                              <tr role="row">
-                                <th role="columnheader" class="" scope="col">
-                                  Name
-                                </th>
-                                <th role="columnheader" class="" scope="col">
-                                  Discontinued
-                                </th>
-                              </tr>
-                            </thead>
-                            <tbody class="nhsuk-table__body">
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin + Paracetamol</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Cocaina</td>
-                                <td class="nhsuk-table__cell " ><svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__tick nhsuk-icon__tick-red" style="color: red;" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12"></path>
-                                  </svg></td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin + Paracetamol</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Banana</td>
-                                <td class="nhsuk-table__cell " > 
-                                  </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Cocaina</td>
-                                <td class="nhsuk-table__cell " ><svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__tick nhsuk-icon__tick-red" style="color: red;" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12"></path>
-                                  </svg></td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin + Paracetamol</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Banana</td>
-                                <td class="nhsuk-table__cell " > 
-                                  </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Cocaina</td>
-                                <td class="nhsuk-table__cell " ><svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__tick nhsuk-icon__tick-red" style="color: red;" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12"></path>
-                                  </svg></td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin + Paracetamol</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Banana</td>
-                                <td class="nhsuk-table__cell " > 
-                                  </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Cocaina</td>
-                                <td class="nhsuk-table__cell " ><svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__tick nhsuk-icon__tick-red" style="color: red;" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12"></path>
-                                  </svg></td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin + Paracetamol</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Banana</td>
-                                <td class="nhsuk-table__cell " > 
-                                  </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Cocaina</td>
-                                <td class="nhsuk-table__cell " ><svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__tick nhsuk-icon__tick-red" style="color: red;" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12"></path>
-                                  </svg></td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin + Paracetamol</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Banana</td>
-                                <td class="nhsuk-table__cell " > 
-                                  </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Cocaina</td>
-                                <td class="nhsuk-table__cell " ><svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__tick nhsuk-icon__tick-red" style="color: red;" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12"></path>
-                                  </svg></td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin + Paracetamol</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Banana</td>
-                                <td class="nhsuk-table__cell " > 
-                                  </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Cocaina</td>
-                                <td class="nhsuk-table__cell " ><svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__tick nhsuk-icon__tick-red" style="color: red;" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12"></path>
-                                  </svg></td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Aspirin + Paracetamol</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Banana</td>
-                                <td class="nhsuk-table__cell " > 
-                                  </td>
-                              </tr>
+                          <thead role="rowgroup" class="nhsuk-table__head">
+                            <tr role="row">
+                              <th role="columnheader" class="" scope="col">
+                                Name
+                              </th>
+                              <th role="columnheader" class="" scope="col">
+                                Invalid
+                              </th>
+                            </tr>
+                          </thead>
+                          <tbody class="nhsuk-table__body">
+                            <tr role="row" class="nhsuk-table__row">
+                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 1 capsular polysaccharide (substance)</a></td>
+                              <td class="nhsuk-table__cell "> </td>
+                            </tr>
+                            <tr role="row" class="nhsuk-table__row">
+                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 10A capsular polysaccharide (substance)</a></td>
+                              <td class="nhsuk-table__cell "> </td>
+                            </tr>
+                            <tr role="row" class="nhsuk-table__row">
+                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 11A capsular polysaccharide (substance)</a></td>
+                              <td class="nhsuk-table__cell "> </td>
+                            </tr>
+                            <tr role="row" class="nhsuk-table__row">
+                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 12F capsular polysaccharide (substance)</a></td>
+                              <td class="nhsuk-table__cell "> </td>
+                            </tr>
+                            <tr role="row" class="nhsuk-table__row">
+                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 14 capsular polysaccharide (substance)</a></td>
+                              <td class="nhsuk-table__cell "> </td>
+                            </tr>
+                            <tr role="row" class="nhsuk-table__row">
+                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 15B capsular polysaccharide (substance)</a></td>
+                              <td class="nhsuk-table__cell "> </td>
+                            </tr>
+                            <tr role="row" class="nhsuk-table__row">
+                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 17F capsular polysaccharide (substance)</a></td>
+                              <td class="nhsuk-table__cell "> </td>
+                            </tr>
+                            <tr role="row" class="nhsuk-table__row">
+                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 18C capsular polysaccharide (substance)</a></td>
+                              <td class="nhsuk-table__cell "> </td>
+                            </tr><tr role="row" class="nhsuk-table__row">
+                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 19A capsular polysaccharide (substance)</a></td>
+                              <td class="nhsuk-table__cell "> </td>
+                            </tr><tr role="row" class="nhsuk-table__row">
+                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 19F capsular polysaccharide (substance)</a></td>
+                              <td class="nhsuk-table__cell "> </td>
+                            </tr>
+                          </tr><tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 2 capsular polysaccharide (substance)</a></td>
+                            <td class="nhsuk-table__cell "> </td>
+                          </tr></tr><tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 22F capsular polysaccharide (substance)</a></td>
+                            <td class="nhsuk-table__cell "> </td>
+                          </tr></tr><tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 3 capsular polysaccharide (substance)</a></td>
+                            <td class="nhsuk-table__cell "> </td>
+                          </tr></tr><tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 33F capsular polysaccharide (substance)</a></td>
+                            <td class="nhsuk-table__cell "> </td>
+                          </tr></tr><tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 4 capsular polysaccharide (substance)</a></td>
+                            <td class="nhsuk-table__cell "> </td>
+                          </tr></tr><tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 5 capsular polysaccharide (substance)</a></td>
+                            <td class="nhsuk-table__cell "> </td>
+                          </tr></tr><tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 6B capsular polysaccharide (substance)</a></td>
+                            <td class="nhsuk-table__cell "> </td>
+                          </tr></tr><tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 7F capsular polysaccharide (substance)</a></td>
+                            <td class="nhsuk-table__cell "> </td>
+                          </tr></tr><tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 8 capsular polysaccharide (substance)</a></td>
+                            <td class="nhsuk-table__cell "> </td>
+                          </tr></tr><tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 9N capsular polysaccharide (substance)</a></td>
+                            <td class="nhsuk-table__cell "> </td>
+                          </tr>
+                        </tr></tr><tr role="row" class="nhsuk-table__row">
+                          <td class="nhsuk-table__cell"><a href="/">Danish serotype 9V capsular polysaccharide (substance)</a></td>
+                          <td class="nhsuk-table__cell "> </td>
+                        </tr>
+                      </tr></tr><tr role="row" class="nhsuk-table__row">
+                        <td class="nhsuk-table__cell"><a href="/">Danish serotype 20 capsular polysaccharide (substance)</a></td>
+                        <td class="nhsuk-table__cell "> </td>
+                      </tr>
+                           
+                          
 
-                            </tbody>
-                          </table>
+                          </tbody>
+                        </table>
                     
+                        <a class="nhsuk-button nhsuk-u-margin-bottom-6" data-module="nhsuk-button" href="/tce-2226/vtm-display-maxdisplay" class="nhsuk-link">Go back to VTM page</a>
 
 
                     </section>
