part ix update feedback implementation

--- a/templates/tce-2226/all-ingredients.html
+++ b/templates/tce-2226/all-ingredients.html
@@ -1,136 +1,184 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="nhsuk-width-container">
-    <main id="maincontent" role="main" class="nhsuk-main-wrapper">
+  <main id="maincontent" role="main" class="nhsuk-main-wrapper">
 
-        <div class="nhsuk-grid-row">
-            <div class="nhsuk-grid-column-two-thirds">
-                <h1 class="nhsuk-heading-xl" id="pageHeading">
-                    <span class="nhsuk-caption-l">VTM Ingredients</span>
-                    <span class="nhsuk-u-visually-hidden"> - </span>
-                    <span id="full-product-name">
-                        <span id="product-name">Streptococcus pneumoniae Danish serotype</span>
-                    </span>
-                </h1>
-            </div>
+    <div class="nhsuk-grid-row">
+      <div class="nhsuk-grid-column-two-thirds">
+        <h1 class="nhsuk-heading-xl" id="pageHeading">
+          <span class="nhsuk-caption-l">VTM Ingredients</span>
+          <span class="nhsuk-u-visually-hidden"> - </span>
+          <span id="full-product-name">
+            <span id="product-name">Streptococcus pneumoniae Danish serotype</span>
+          </span>
+        </h1>
+      </div>
+    </div>
+
+    <div class="nhsuk-grid-row">
+
+
+      <div class="nhsuk-grid-column-two-thirds">
+
+
+
+
+        <div>
+          <section id="ingredients">
+            <h2 class="nhsuk-heading-l">Ingredient details</h2>
+            <table class="nhsuk-table nhsuk-u-margin-bottom-4">
+
+              <thead role="rowgroup" class="nhsuk-table__head">
+                <tr role="row">
+                  <th role="columnheader" class="" scope="col">
+                    Name
+                  </th>
+                  <th role="columnheader" class="" scope="col">
+                    Invalid
+                  </th>
+                </tr>
+              </thead>
+              <tbody class="nhsuk-table__body">
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 1 capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 10A capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 11A capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 12F capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 14 capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 15B capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 17F capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 18C capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 19A capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 19F capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 2 capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 22F capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 3 capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 33F capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 4 capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 5 capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 6B capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 7F capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 8 capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 9N capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                </tr>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 9V capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+                </tr>
+                </tr>
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell"><a href="/">Danish serotype 20 capsular polysaccharide (substance)</a>
+                  </td>
+                  <td class="nhsuk-table__cell "> </td>
+                </tr>
+
+
+
+              </tbody>
+            </table>
+
+            <a class="nhsuk-button nhsuk-u-margin-bottom-6" data-module="nhsuk-button"
+              href="/tce-2226/vtm-display-maxdisplay" class="nhsuk-link">Go back to VTM page</a>
+
+
+          </section>
         </div>
 
-        <div class="nhsuk-grid-row">
+      </div>
+    </div>
 
-
-            <div class="nhsuk-grid-column-two-thirds">
-
-
-
-
-                <div>
-                    <section id="ingredients">
-                        <h2 class="nhsuk-heading-l">Ingredient details</h2>
-                        <table class="nhsuk-table nhsuk-u-margin-bottom-4">
-                        
-                          <thead role="rowgroup" class="nhsuk-table__head">
-                            <tr role="row">
-                              <th role="columnheader" class="" scope="col">
-                                Name
-                              </th>
-                              <th role="columnheader" class="" scope="col">
-                                Invalid
-                              </th>
-                            </tr>
-                          </thead>
-                          <tbody class="nhsuk-table__body">
-                            <tr role="row" class="nhsuk-table__row">
-                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 1 capsular polysaccharide (substance)</a></td>
-                              <td class="nhsuk-table__cell "> </td>
-                            </tr>
-                            <tr role="row" class="nhsuk-table__row">
-                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 10A capsular polysaccharide (substance)</a></td>
-                              <td class="nhsuk-table__cell "> </td>
-                            </tr>
-                            <tr role="row" class="nhsuk-table__row">
-                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 11A capsular polysaccharide (substance)</a></td>
-                              <td class="nhsuk-table__cell "> </td>
-                            </tr>
-                            <tr role="row" class="nhsuk-table__row">
-                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 12F capsular polysaccharide (substance)</a></td>
-                              <td class="nhsuk-table__cell "> </td>
-                            </tr>
-                            <tr role="row" class="nhsuk-table__row">
-                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 14 capsular polysaccharide (substance)</a></td>
-                              <td class="nhsuk-table__cell "> </td>
-                            </tr>
-                            <tr role="row" class="nhsuk-table__row">
-                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 15B capsular polysaccharide (substance)</a></td>
-                              <td class="nhsuk-table__cell "> </td>
-                            </tr>
-                            <tr role="row" class="nhsuk-table__row">
-                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 17F capsular polysaccharide (substance)</a></td>
-                              <td class="nhsuk-table__cell "> </td>
-                            </tr>
-                            <tr role="row" class="nhsuk-table__row">
-                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 18C capsular polysaccharide (substance)</a></td>
-                              <td class="nhsuk-table__cell "> </td>
-                            </tr><tr role="row" class="nhsuk-table__row">
-                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 19A capsular polysaccharide (substance)</a></td>
-                              <td class="nhsuk-table__cell "> </td>
-                            </tr><tr role="row" class="nhsuk-table__row">
-                              <td class="nhsuk-table__cell"><a href="/">Danish serotype 19F capsular polysaccharide (substance)</a></td>
-                              <td class="nhsuk-table__cell "> </td>
-                            </tr>
-                          </tr><tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 2 capsular polysaccharide (substance)</a></td>
-                            <td class="nhsuk-table__cell "> </td>
-                          </tr></tr><tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 22F capsular polysaccharide (substance)</a></td>
-                            <td class="nhsuk-table__cell "> </td>
-                          </tr></tr><tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 3 capsular polysaccharide (substance)</a></td>
-                            <td class="nhsuk-table__cell "> </td>
-                          </tr></tr><tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 33F capsular polysaccharide (substance)</a></td>
-                            <td class="nhsuk-table__cell "> </td>
-                          </tr></tr><tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 4 capsular polysaccharide (substance)</a></td>
-                            <td class="nhsuk-table__cell "> </td>
-                          </tr></tr><tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 5 capsular polysaccharide (substance)</a></td>
-                            <td class="nhsuk-table__cell "> </td>
-                          </tr></tr><tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 6B capsular polysaccharide (substance)</a></td>
-                            <td class="nhsuk-table__cell "> </td>
-                          </tr></tr><tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 7F capsular polysaccharide (substance)</a></td>
-                            <td class="nhsuk-table__cell "> </td>
-                          </tr></tr><tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 8 capsular polysaccharide (substance)</a></td>
-                            <td class="nhsuk-table__cell "> </td>
-                          </tr></tr><tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell"><a href="/">Danish serotype 9N capsular polysaccharide (substance)</a></td>
-                            <td class="nhsuk-table__cell "> </td>
-                          </tr>
-                        </tr></tr><tr role="row" class="nhsuk-table__row">
-                          <td class="nhsuk-table__cell"><a href="/">Danish serotype 9V capsular polysaccharide (substance)</a></td>
-                          <td class="nhsuk-table__cell "> </td>
-                        </tr>
-                      </tr></tr><tr role="row" class="nhsuk-table__row">
-                        <td class="nhsuk-table__cell"><a href="/">Danish serotype 20 capsular polysaccharide (substance)</a></td>
-                        <td class="nhsuk-table__cell "> </td>
-                      </tr>
-                           
-                          
-
-                          </tbody>
-                        </table>
-                    
-                        <a class="nhsuk-button nhsuk-u-margin-bottom-6" data-module="nhsuk-button" href="/tce-2226/vtm-display-maxdisplay" class="nhsuk-link">Go back to VTM page</a>
-
-
-                    </section>
-                </div>
-
-            </div>
-        </div>
-
-    </main>
+  </main>
 </div>
 {% endblock %}
