--- a/templates/tce-1105/actual/confirm.html
+++ b/templates/tce-1105/actual/confirm.html
@@ -12,7 +12,7 @@
         </svg>
         Back to require price amend</a>
     </div>
-    <h1 class="heading-xlarge">Actual Part IX Quick Price Update</h1>
+    <h1 class="heading-xlarge">Review changes</h1>
 
     <div class="nhsuk-body-m flex--space-between">
       <div class="nhsuk-u-visually-hidden">Currently viewing</div>
