--- a/templates/tce-1105/actual/confirmationpage.html
+++ b/templates/tce-1105/actual/confirmationpage.html
@@ -14,7 +14,7 @@
 
     </div-->
 
-    
+
 
     <table role="table" class="nhsuk-table-responsive all-selections" style="margin-bottom: 24px;">
       <caption class="nhsuk-table__caption nhsuk-u-margin-bottom-4">Price update for Hollister Ltd</caption>
@@ -516,6 +516,8 @@
       </tbody>
     </table>
 
+
+
     <div id="pagination">
       <nav aria-label="Pagination Navigation">
         <ul class="pagination nhsuk-u-margin-bottom-0">
@@ -546,8 +548,10 @@
       </nav>
     </div>
 
+    <a class="nhsuk-button " href="/">Return to homepage </a>
 
-  </div>
+
+</div>
 </div>
 <script>
 
