--- a/templates/tce-1105/actual/search.html
+++ b/templates/tce-1105/actual/search.html
@@ -11,7 +11,7 @@
         </svg>
         Back to supplier search</a>
     </div>
-    <h1 class="heading-xlarge">Actual Part IX Quick Price Update</h1>
+    <h1 class="heading-xlarge">Select drugs for update</h1>
 
 <!--    <table role="table" class="nhsuk-table-responsive mobile-view" style="margin-bottom: 56px">-->
 <!--      <caption class="nhsuk-table__caption">Results</caption>-->
