--- a/templates/tce-1105/actual/date-amend-yes-or-no.html
+++ b/templates/tce-1105/actual/date-amend-yes-or-no.html
@@ -11,7 +11,7 @@
         </svg>
         Back to results</a>
     </div>
-    <h1 class="heading-xlarge">Actual Part IX Quick Price Update</h1>
+    <h1 class="heading-xlarge">Set reimbursement date</h1>
 
     <fieldset class="nhsuk-fieldset">
       <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
