--- a/templates/tce-1105/actual/price-amend-yes-or-no.html
+++ b/templates/tce-1105/actual/price-amend-yes-or-no.html
@@ -11,7 +11,7 @@
         </svg>
         Back to require date amend</a>
     </div>
-    <h1 class="heading-xlarge">Actual Part IX Quick Price Update</h1>
+    <h1 class="heading-xlarge">Change unrounded price</h1>
 
     <fieldset class="nhsuk-fieldset">
       <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
@@ -37,7 +37,7 @@
           <div class="nhsuk-radios__conditional nhsuk-radios__conditional--hidden" id="conditional-contact-1">
             <div class="nhsuk-form-group">
               <label class="nhsuk-label" for="price">
-                Price in pence
+                Unrounded price in pence
               </label>
               <input class="nhsuk-input nhsuk-u-width-one-quarter" id="price" name="link-url" type="text">
             </div>
@@ -179,10 +179,10 @@ console.log('radio inputs', radioInputs)
   Array.prototype.slice.call(radioInputs).forEach((radioButton) => {
     radioButton.addEventListener('change', (e) => {
     console.log('e', e);
-<!--      // Hide all conditional content on all input clicks-->
+     // Hide all conditional content on all input clicks-->
       radioInputs.forEach((input) => input.setAttribute('aria-expanded', 'false'));
       Array.prototype.slice.call(conditionalInputs).forEach((input) => addClass(input, 'nhsuk-radios__conditional--hidden'));
-<!--      // Toggle conditional content based on checked state-->
+      // Toggle conditional content based on checked state-->
       toggleConditionalInput(e.target, 'nhsuk-radios__conditional--hidden');
        console.log('e.target', e.target)
     });
