--- a/templates/tce-2226/vtm-display-homeopathic.html
+++ b/templates/tce-2226/vtm-display-homeopathic.html
@@ -21,8 +21,9 @@
                 <h2 class="nhsuk-heading-l nhsuk-u-visually-hidden">Navigation</h2>
                 <ul class="nhsuk-list">
                     <li><a href="#nameDetails">Name Details</a></li>
-                    <li><a href="#ingredients">Ingredients details</a></li>
+                    
                     <li><a href="#productCodes">Codes</a></li>
+                    <li><a href="#ingredients">Ingredients details</a></li>
                     <li><a href="#vtmVmps">Virtual Medicinal Products (VMPs)</a></li>
                     <li><a href="#productLinks">Further Links</a></li>
                 </ul>
@@ -77,42 +78,7 @@
                     </section>
                 </div>
 
-                <div>
-                    <section id="ingredients">
-                        <h2 class="nhsuk-heading-l">Ingredient details</h2>
-                        <table class="nhsuk-table">
-                        
-                            <thead role="rowgroup" class="nhsuk-table__head">
-                              <tr role="row">
-                                <th role="columnheader" class="" scope="col">
-                                  Name
-                                </th>
-                                <th role="columnheader" class="" scope="col">
-                                  Invalid
-                                </th>
-                              </tr>
-                            </thead>
-                            <tbody class="nhsuk-table__body">
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Ingredient unavailable for this VTM</td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <!--tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell"><a href="/tce-2226/ingredient2">Paracetamol</a></td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell">Cocaine</td>
-                                <td class="nhsuk-table__cell " ><svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__tick nhsuk-icon__tick-red" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12"></path>
-                                  </svg></td>
-                              </tr-->
-                            </tbody>
-                          </table>
 
-
-                    </section>
-                </div>
 
                 <section class="nhsuk-table-responsive" id="productCodes">
                     <h2 class="nhsuk-heading-l">Codes</h2>
@@ -174,6 +140,43 @@
                         </tbody>
                     </table>
                 </section>
+
+                <div>
+                    <section id="ingredients">
+                        <h2 class="nhsuk-heading-l">Ingredient details</h2>
+                        <table class="nhsuk-table">
+                        
+                            <thead role="rowgroup" class="nhsuk-table__head">
+                              <tr role="row">
+                                <th role="columnheader" class="" scope="col">
+                                  Name
+                                </th>
+                                <th role="columnheader" class="" scope="col">
+                                  Invalid
+                                </th>
+                              </tr>
+                            </thead>
+                            <tbody class="nhsuk-table__body">
+                              <tr role="row" class="nhsuk-table__row">
+                                <td class="nhsuk-table__cell">There is no ingredient linked for this VTM</td>
+                                <td class="nhsuk-table__cell "> </td>
+                              </tr>
+                              <!--tr role="row" class="nhsuk-table__row">
+                                <td class="nhsuk-table__cell"><a href="/tce-2226/ingredient2">Paracetamol</a></td>
+                                <td class="nhsuk-table__cell "> </td>
+                              </tr>
+                              <tr role="row" class="nhsuk-table__row">
+                                <td class="nhsuk-table__cell">Cocaine</td>
+                                <td class="nhsuk-table__cell " ><svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__tick nhsuk-icon__tick-red" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12"></path>
+                                  </svg></td>
+                              </tr-->
+                            </tbody>
+                          </table>
+
+
+                    </section>
+                </div>
 
                 <section class="" id="vtmVmps">
                     <h2 class="nhsuk-heading-l">Virtual Medicinal Products (VMPs)</h2>
